--- a/styles.css
+++ b/styles.css
@@ -339,15 +339,19 @@ nav {
 }
 
 .contact__socials a:hover {
-  background: var(--gradient-2);
+  background: var(--background-color);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
   padding: 1rem;
-  font-size: 0.9rem;
+  font-size: 14px;
+  font-weight: 600;
   color: var(--extra-light);
   text-align: center;
+}
+.footer span{
+  color: var(--background-color);
 }
 
 
